k8s/networkpolicies/np-mysql-allow-webapi.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-mysql-deny-all
  namespace: linuxander
spec:
  podSelector:
    matchLabels:
      app: "mysql-deployment"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webapi-deployment
      ports:
        - protocol: TCP
          port: 3306
