k8s/networkpolicies/np-mysql-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-mysql-deny-all
  namespace: linuxander
spec:
  podSelector:
    matchLabels:
      app: "mysql-deployment"
  policyTypes:
    - Ingress
